GNOME Bugzilla – Bug 789646
live555 clients get timed out after a while
Last modified: 2018-04-18 11:25:11 UTC
E.g. try with http://www.live555.com/openRTSP/ and the -t (for TCP) commandline option. Using "-K" prevents this, with UDP the data also seems to be continued to be sent. About "-K": > "-K " - Periodically send a RTSP "OPTIONS" command, to keep the connection alive. (This is useful with buggy servers that don't listen to our periodic RTCP "RR" packets instead.) This only happens if the session cleanup timeout is used, e.g. https://cgit.freedesktop.org/gstreamer/gst-rtsp-server/tree/examples/test-multicast.c#n25
With 1.8 this works fine, if someone wants to bisect
This bug is listed in release notes of 1.12.4 release https://gstreamer.freedesktop.org/releases/gst-rtsp-server/1.12.4.html Is it fixed ?
No, it only appears there because it was set with target milestone 1.12.4 but the script is not checking if those bugs are actually closed. Which this one isn't. Nobody had time to look closer into this bug yet. If it is fixed, then it will be written here and nowhere else.
I can't reproduce this with gst-rtsp-server/examples/test-uri foo.mp4 Plays for 2.5 minutes over TCP, all the way to the end.
I can also reproduce it with test-uri here still. The files stops being written after about 1 minute.
I would just like to confirm that the issue is the following: * "When a RTSP client connects and negotiates a TCP lower-layer connection, the rtsp-server ends up timing out and disconnecting the client _even if_ the lower layer TCP connection is still up" * If other mechanisms are used (such as periodically sending commands or RR RTCP packets) then the connection will _not_ be timed out. correct ?
> * "When a RTSP client connects and negotiates a TCP lower-layer connection, the rtsp-server ends up timing out and disconnecting the client _even if_ the lower layer TCP connection is still up" Even if the RTSP client is sending RTCP packets over the TCP connection. > * If other mechanisms are used (such as periodically sending commands or RR RTCP packets) then the connection will _not_ be timed out. Commands works fine, RTCP not (see above). Using media transport over UDP will close the TCP connection too, but media continues to be sent (but this seems fine).
This can't have never worked before. I assume it only worked in 1.8 because we failed to time-out clients due to a bug that was fixed since then. commit 0dc617058203acae4db137621ee7ac388dd9eb30 (HEAD -> master) Author: Sebastian Dröge <sebastian@centricular.com> Date: Wed Feb 28 21:12:43 2018 +0200 rtsp-client: Place netaddress meta on packets received via TCP This allows us to later map signals from rtpbin/rtpsource back to the corresponding stream transport, and allows to do keep-alive based on RTCP packets in case of TCP media transport. https://bugzilla.gnome.org/show_bug.cgi?id=789646
The problem is still actual in 1.14.0 release for RTSP-over-HTTP tunneling. I created a new defect: https://bugzilla.gnome.org/show_bug.cgi?id=795354